python/test-data/testTypesHigherOrderFuns.err
untypy.error.UntypyTypeError
given:    'hello'
expected: value of type int

context: map(container: Iterable[str], fun: Callable[[str], int]) -> list[int]
                                                            ^^^
declared at: test-data/testTypesHigherOrderFuns.py:3
  1 | from wypp import *
  2 | 
  3 > def map(container: Iterable[str], fun: Callable[[str], int]) -> list[int]:
  4 |     res = []
  5 |     for x in container:

caused by: test-data/testTypesHigherOrderFuns.py:10
  8 | 
  9 | print(map(["hello", "1"], len))
 10 > map(["hello", "1"], lambda x: x)
